--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,11 +2,11 @@
    Includes
    ========================================================================== */
 
-@import "normalize";
-@import "colors";
-@import "icons";
-@import "fonts";
-@import "highlight";
+@import "theme/normalize";
+@import "theme/colors";
+@import "theme/icons";
+@import "theme/fonts";
+@import "theme/highlight";
 
 /* ==========================================================================
    Basics
